Update: Fix UI and remove unused